# GardenStation

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test-on-push.yml  update-wiki.yml
db/: database.db  schema.sql
docs/: Bugs.md  Contributing.md  Contributions.md  Database.md  Design-Decisions.md  Design.md  Home-Page.md  Home.md  Project-Roadmap.md  Security.md  _Sidebar.md  home_page.txt  test.md
misc/src/: dummy_gen.py
resources/: soil_moisture_erd.drawio
src/: dummy_gen.py  main.py
static/css/: styles.css
templates/: base.html  include_header.html  index.html  index.shtml  soil.html  weather.html
tests/: conftest.py  database_test.py  graphs_test.py
web/: index.html  styles.css  weather.html
webserver/: database.py  graphs.py  init_db.py  main.py
webserver/static/css/: styles.css
webserver/templates/: base.html  graph.html  soil.html  weather.html
